[project]
name = "auto-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen[websurfer]>=0.10.1",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[anthropic,google,groq,mistral,openai,together]>=0.7.5",
    "tavily-python>=0.7.13",
    "serpapi>=0.1.5",
]
